added links for chefs, footer and copyright

--- a/artisans.html
+++ b/artisans.html
@@ -70,10 +70,18 @@
                                 <img src="assets/img/chefs/chefs-1.jpg" class="img-fluid"
                                     alt="Madam Tan, Master Kuih Maker">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-twitter-x"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-facebook"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-instagram"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
@@ -92,10 +100,18 @@
                                 <img src="assets/img/chefs/chefs-2.jpg" class="img-fluid"
                                     alt="Chef Amir, Nyonya Dessert Specialist">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-twitter-x"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-facebook"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-instagram"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
@@ -115,10 +131,18 @@
                                 <img src="assets/img/chefs/chefs-3.jpg" class="img-fluid"
                                     alt="Cik Lily, Ingredient Sourcing Expert">
                                 <div class="social">
-                                    <a href=""><i class="bi bi-twitter-x"></i></a>
-                                    <a href=""><i class="bi bi-facebook"></i></a>
-                                    <a href=""><i class="bi bi-instagram"></i></a>
-                                    <a href=""><i class="bi bi-linkedin"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-twitter-x"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-facebook"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-instagram"></i></a>
+                                    <a
+                                        href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLbpi6ZahtOH4SVczoTshjP05vUsysmMCz&index=1"><i
+                                            class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                             <div class="member-info">
