--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,6 @@
                     <p>50000 Kuala Lumpur, Malaysia</p>
                     <p></p>
                 </div>
-
             </div>
 
             <div class="col-lg-3 col-md-6 d-flex">
@@ -38,27 +37,31 @@
             <div class="col-lg-3 col-md-6">
                 <h4>Follow Us</h4>
                 <div class="social-links d-flex">
-                    <a href="https://twitter.com/kuihtradisi" class="twitter" target="_blank" rel="noopener"><i
+                    <a href="https://x.com/elonmusk" class="twitter" target="_blank" rel="noopener"><i
                             class="bi bi-twitter-x"></i></a>
-                    <a href="https://www.facebook.com/kuihtradisi" class="facebook" target="_blank" rel="noopener"><i
+                    <a href="https://www.facebook.com/vector.lim.9" class="facebook" target="_blank" rel="noopener"><i
                             class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/kuihtradisi" class="instagram" target="_blank" rel="noopener"><i
-                            class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/kuihtradisi" class="linkedin" target="_blank"
+                    <a href="https://www.instagram.com/respulte?igsh=MTZ2a2JnanRubnRjdQ%3D%3D&utm_source=qr"
+                        class="instagram" target="_blank" rel="noopener"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/anwaribrahimofficial/" class="linkedin" target="_blank"
                         rel="noopener"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
-
         </div>
     </div>
 
     <div class="container copyright text-center mt-4">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">KuihTradisi</strong> <span>All Rights Reserved</span>
+
+        <p class="small" style="text-align: center; font-size: 1rem;">
+            <img src="https://getbootstrap.com/docs/5.3/assets/brand/bootstrap-logo-shadow.png" alt="Bootstrap Logo"
+                width="40" height="40">Built with <a href="https://getbootstrap.com/" target="_blank"
+                rel="noopener">Bootstrap</a> and <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
         </p>
     </div>
-    <!-- Scroll Top (This can also be loaded with the footer, or kept separate) -->
-    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-            class="bi bi-arrow-up-short"></i></a>
 
-
+    <!-- Scroll Top -->
+    <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center">
+        <i class="bi bi-arrow-up-short"></i>
+    </a>
 </footer>
