google login button size fix

--- a/login.html
+++ b/login.html
@@ -85,9 +85,11 @@
 
                             <h3>Or Login with Google</h3>
                             <!-- Google Sign-In button container -->
-                            <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline"
-                                data-text="continue_with" data-shape="rectangular" data-logo_alignment="left"
-                                data-width="100%">
+                            <div class="d-grid">
+                                <div class="g_id_signin" data-type="standard" data-size="large" data-theme="outline"
+                                    data-text="continue_with" data-shape="rectangular" data-logo_alignment="left"
+                                    data-width="100%">
+                                </div>
                             </div>
                             <div id="googleLoginMessage" class="mt-3 text-center text-success" style="display: none;">
                             </div>
