picture directory fix v2

--- a/about.html
+++ b/about.html
@@ -44,8 +44,9 @@
 
         <!-- NEW: Why Choose Us Section -->
         <section id="why-choose-us" class="why-us-immersive section">
-
-            <div class="why-us-bg"></div> <!-- Background Image & Overlay -->
+            <div class="why-us-bg">
+                <img src="assets/img/bg-about.png" alt="Background" />
+            </div>
 
             <div class="container">
                 <!-- Section Title -->
