picture directory fix v5

--- a/about.html
+++ b/about.html
@@ -45,7 +45,8 @@
         <!-- NEW: Why Choose Us Section -->
         <section id="why-choose-us" class="why-us-immersive section">
             <div class="why-us-bg">
-                <img src="assets/img/bg-about.png" alt="Background" />
+                <img src="assets/img/bg-about.png" alt="Background"
+                    style="  width: 100%; height: auto; object-fit: cover; display: block;   " />
             </div>
 
             <div class="container">
